--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,37 @@
 <resources>
-    <string name="app_name">toy_project</string>
+    <string name="app_name">TOY_PROJECT</string>
+    <string name="title">모든 메모</string>
+    <string name="add_memo">글 작성</string>
+    <string name="edit_memo">메모 수정</string>
+    <string name="delete_memo">메모 삭제</string>
+    <string name="gallery_name">사진첩</string>
+
+    <string name="all">전체</string>
+    <string name="edit">편집</string>
+    <string name="delete">삭제</string>
+
+    <string name="nothing"> </string>
+
+    <string name="menu_attach">Attach</string>
+    <string name="success">완료</string>
+
+    <string name="menu_camera">카메라</string>
+    <string name="menu_gallery">갤러리</string>
+    <string name="menu_url">URL(링크) 이미지</string>
+
+    <string name="title_hint">제목</string>
+    <string name="content_hint">내용</string>
+
+    <string name="no_title">제목 없음</string>
+
+    <string name="save_memo">메모가 저장되었습니다.</string>
+    <string name="remove_memo">삭제되었습니다.</string>
+
+    <string name="empty_memo">이미지를 추가하거나 내용을 입력해주세요.</string>
+    <string name="fail_multi_gallery">사진 선택에 실패했습니다.</string>
+    <string name="fail_url">유효하지 않은 URL입니다.</string>
+    <string name="fail_image">이미지를 불러오는데 실패했습니다.</string>
+    <string name="no_memo">메모가 없어요!</string>
+
+
 </resources>
