--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="tab_chat">채팅</string>
     <string name="tab_profile">내정보</string>
     <string name="tab_strayt1">센터 보호현황</string>
-    <string name="tab_strayt2">유가동물 사연</string>
+    <string name="tab_strayt2">유기동물 사연</string>
     
     
     <string name="title">모든 메모</string>
