--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="fail_url">유효하지 않은 URL입니다.</string>
     <string name="fail_image">이미지를 불러오는데 실패했습니다.</string>
     <string name="no_memo">메모가 없어요!</string>
+    <string name="no_list">결과가 없습니다!</string>
 
 
 </resources>
